--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,8 +7,14 @@
 
 .navLink {
     text-decoration: none;
+    transition: all 300ms ease-out;
+}
+
+.navLink:hover {
+    text-decoration: underline;
 }
 
 .navLinkActive {
-    color: red;
+    color: rgb(236, 53, 53);
 }
+
